Removed descriptor set layout ptr from descriptor set.

--- a/tests/shell.html
+++ b/tests/shell.html
@@ -20,7 +20,7 @@
     <p id="l" style="font-family: 'Courier New', monospace; font-size:20px; color:rgb(188,188,188); text-align:center; position:relative; top:50%">Loading</p>
 
     <div class="emscripten_border">
-      <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" tabindex="-1"></canvas>
+      <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
     </div>
     <script async type="text/javascript" src="assets.js"></script>
     {{{ SCRIPT }}}
